--- a/bicicletas.html
+++ b/bicicletas.html
@@ -41,7 +41,7 @@
 
 		<main>
 			<div class="titulo-bg">
-				<div class="titulo container">
+				<div class="titulo container fadeInDown" data-anime="200">
 					<p class="font-2-l-b cor-5">Escolha a melhor para você</p>
 					<h1 class="font-1-xxl cor-0">
 						nossas bicicletas<span class="cor-p1">.</span>
@@ -50,11 +50,11 @@
 			</div>
 
 			<div class="bicicletas container">
-				<div class="bicicletas-imagem">
+				<div class="bicicletas-imagem fadeInLeft" data-anime="400">
 					<img src="./img/bicicletas/nimbus.jpg" alt="Bicicleta preta" />
 					<span class="font-2-m cor-0">R$ 4999</span>
 				</div>
-				<div class="bicicletas-conteudo">
+				<div class="bicicletas-conteudo fadeInRight" data-anime="400">
 					<h2 class="font-1-xl">Nimbus Stark</h2>
 					<p class="font-2-s cor-8">
 						A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela
@@ -75,13 +75,13 @@
 				</div>
 			</div>
 
-			<div class="bicicletas-bg">
+			<div class="bicicletas-bg fadeInRight" data-anime="400">
 				<div class="bicicletas container">
-					<div class="bicicletas-imagem">
+					<div class="bicicletas-imagem fadeInRight" data-anime="600">
 						<img src="./img/bicicletas/magic.jpg" width="1120" height="680" alt="Bicicleta preta" />
 						<span class="font-2-m cor-0">R$ 2499</span>
 					</div>
-					<div class="bicicletas-conteudo">
+					<div class="bicicletas-conteudo fadeInRight" data-anime="500">
 						<h2 class="font-1-xl cor-0">Magic Might</h2>
 						<p class="font-2-s cor-5">
 							A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela
@@ -106,11 +106,11 @@
 			</div>
 
 			<div class="bicicletas container">
-				<div class="bicicletas-imagem">
+				<div class="bicicletas-imagem fadeInLeft" data-anime="600">
 					<img src="./img/bicicletas/nebula.jpg" width="1120" height="680" alt="Bicicleta preta" />
 					<span class="font-2-m cor-0">R$ 3999</span>
 				</div>
-				<div class="bicicletas-conteudo">
+				<div class="bicicletas-conteudo fadeInRight" data-anime="600">
 					<h2 class="font-1-xl">Nebula Cosmic</h2>
 					<p class="font-2-s cor-8">
 						A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela
@@ -175,6 +175,7 @@
 				</p>
 			</div>
 		</footer>
+			<script src="./js/plugins/simple-anime.js"></script>
 			<script src="./js/scripts.js"></script>
 	</body>
 </html>
