--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -38,15 +38,15 @@
 		<main class="titulo-bg">
 			<div>
 				<div class="titulo container">
-					<p class="font-2-l-b cor-5">R$ 2499</p>
-					<h1 class="font-1-xxl cor-0">
+					<p class="font-2-l-b cor-5 fadeInUp" data-anime="600">R$ 2499</p>
+					<h1 class="font-1-xxl cor-0 fadeInDown" data-anime="200">
 						Magic Might<span class="cor-p1">.</span>
 					</h1>
 				</div>
 			</div>
 
 			<div class="bicicleta container">
-				<div class="bicicleta-imagens">
+				<div class="bicicleta-imagens fadeInLeft" data-anime="400">
 					<a href="./magic.html">
 						<img src="../img/bicicleta/nimbus2.jpg" width="1120" height="880" alt="Bicicleta 2" />
 					</a>
@@ -57,7 +57,7 @@
 						<img src="../img/bicicleta/nimbus3.jpg" width="1120" height="880" alt="Bicicleta 3"
 					/></a>
 				</div>
-				<div class="bicicleta-conteudo">
+				<div class="bicicleta-conteudo fadeInRight" data-anime="400">
 					<p class="font-2-l cor-5">
 						A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela
 						vem equipada com os melhores acessórios, o que garante maior
@@ -209,6 +209,7 @@
 				</p>
 			</div>
 		</footer>
+			<script src="../js/plugins/simple-anime.js"></script>
 			<script src="../js/scripts.js"></script>
 	</body>
 </html>
