--- a/contato.html
+++ b/contato.html
@@ -38,7 +38,7 @@
 
 		<main>
 			<div class="titulo-bg">
-				<div class="titulo container">
+				<div class="titulo container fadeInDown" data-anime="200">
 					<p class="font-2-l-b cor-5">respostas em até 24h</p>
 					<h1 class="font-1-xxl cor-0">
 						nosso contato<span class="cor-p1">.</span>
@@ -46,7 +46,7 @@
 				</div>
 			</div>
 
-			<div class="contato container">
+			<div class="contato container fadeInUp" data-anime="400">
 				<section class="contato-dados" aria-label="Endereço">
 					<h2 class="font-1-m cor-0">Loja Online</h2>
 					<div class="contato-endereco font-2-s cor-4">
@@ -212,6 +212,7 @@
 				</p>
 			</div>
 		</footer>
+			<script src="./js/plugins/simple-anime.js"></script>
 			<script src="./js/scripts.js"></script>
 	</body>
 </html>
