--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		</main>
 
 		<article class="bicicletas-lista">
-			<h2 class="container font-1-xxl">
+			<h2 class="container font-1-xxl fadeInLeft" data-anime="700">
 				escolha a sua<span class="cor-p1">.</span>
 			</h2>
 
