--- a/orcamento.html
+++ b/orcamento.html
@@ -41,13 +41,13 @@
 
     <main>
       <div class="titulo-bg">
-        <div class="titulo container">
+        <div class="titulo container fadeInDown" data-anime="200">
           <p class="font-2-l-b cor-5">Cotações no seu email</p>
           <h1 class="font-1-xxl cor-0">solicite um orçamento<span class="cor-p1">.</span></h1>
         </div>
       </div>
 
-			<form class="orcamento container" action="./">
+			<form class="orcamento container fadeInUp" data-anime="500" action="./">
 				<div class="orcamento-produto">
 					<h2 class="font-1-xs cor-5">Bikcraft ou Seguro?</h2>
 					
@@ -205,6 +205,7 @@
 				</p>
 			</div>
 		</footer>
+			<script src="./js/plugins/simple-anime.js"></script>
 			<script src="./js/scripts.js"></script>
 	</body>
 </html>
