--- a/termos.html
+++ b/termos.html
@@ -41,23 +41,23 @@
 
     <main>
       <div class="titulo-bg">
-        <div class="titulo container">
+        <div class="titulo container fadeInDown" data-anime="200">
           <p class="font-2-l-b cor-5">Termos de uso</p>
           <h1 class="font-1-xxl cor-0">Termos e Condições<span class="cor-p1">.</span></h1>
         </div>
       </div>
 
       <div class="termos font-2-s cor-10 container">
-        <h2 class="font-1-l cor-11">1. Política de Estorno</h2>
-        <p>1.1 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
-        <p>1.2 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
-        <p>1.3 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
+        <h2 class="font-1-l cor-11 fadeInDown" data-anime="300">1. Política de Estorno</h2>
+        <p class="fadeInLeft" data-anime="350">1.1 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
+        <p class="fadeInLeft" data-anime="450">1.2 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
+        <p class="fadeInLeft" data-anime="550">1.3 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
 
-        <h2 class="font-1-l cor-11">2. Conta do Usuário</h2>
-        <p>2.1 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
+        <h2 class="font-1-l cor-11 fadeInDown" data-anime="600">2. Conta do Usuário</h2>
+        <p class="fadeInLeft" data-anime="650">2.1 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
 
-        <h2 class="font-1-l cor-11">3. Seguro Bikcraft</h2>
-        <p>2.1 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
+        <h2 class="font-1-l cor-11 fadeInDown" data-anime="800">3. Seguro Bikcraft</h2>
+        <p class="fadeInLeft" data-anime="850">2.1 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
       </div>
     </main>
 
@@ -105,6 +105,7 @@
 				</p>
 			</div>
 		</footer>
+			<script src="./js/plugins/simple-anime.js"></script>
 			<script src="./js/scripts.js"></script>
 	</body>
 </html>
